--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </p>
             <nav>
                   <a href="#">Studio</a>
-                  <a href="#">Portfolio</a>
+                  <a href="portfolio.html">Portfolio</a>
                   <a href="#">Contacts</a>
             </nav>
             <div>
