--- a/index.html
+++ b/index.html
@@ -4,26 +4,30 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Web Studio Homework Project</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet">
+      <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
+<body class="body">
       <!--Header section-->
-      <header>
-            <p><a href="#"><b>WebStudio</b></a>
+      <header class="header">
+            <p class="header__logo"><a href="#"><b>WebStudio</b></a>
             </p>
-            <nav>
+            <nav class="header__navigation">
                   <a href="#">Studio</a>
                   <a href="portfolio.html">Portfolio</a>
                   <a href="#">Contacts</a>
             </nav>
-            <div>
+            <div class="header__info">
                   <a href="emailto:info@devstudio.com">info@devstudio.com</a>
                   <a href="tel:+12127724150">+1 212-772-4150</a>
             </div>
-            <h1>Effective solutions for <br>
+            <h1 class="header__title">Effective solutions for <br>
                   your business</h1>
-            <button type="button">Request our service</button>
+            <button class="header__request" type="button">Request our service</button>
       </header>
 
       <!--Main section-->
