--- a/portfolio.html
+++ b/portfolio.html
@@ -4,37 +4,106 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet">
+      <link rel="stylesheet" href="./css/styles.css">
       <title>Portfolio</title>
 </head>
 
 <body>
       <!--Header section-->
-      <header>
+      <header class="header">
             <p><a href="#"><b>WebStudio</b></a>
             </p>
-            <nav>
+            <nav class="header__navigation">
                   <a href="#">Studio</a>
                   <a href="#">Portfolio</a>
                   <a href="#">Contacts</a>
             </nav>
-            <div>
-                  <a href="emailto:info@devstudio.com">info@devstudio.com</a>
+            <div class="header__info">
+                  <a href=" emailto:info@devstudio.com">info@devstudio.com</a>
                   <a href="tel:+12127724150">+1 212-772-4150</a>
             </div>
       </header>
 
+      <!--Filters section-->
+      <section class="filters-section">
+            <ul>
+                  <li>All</li>
+                  <li>Web-sites</li>
+                  <li>Apps</li>
+                  <li>Design</li>
+                  <li>Marketing</li>
+            </ul>
+      </section>
+
+      <!--Portfolio section-->
+      <section class="Portfolio-section">
+            <ul>
+                  <li>
+                        <img src="./images/technoduck-image.jpeg" alt="website layout for laptop" width="200"><br>
+                        <b>Technoduck</b><br>
+                        Web-site
+                  </li>
+                  <li>
+                        <img src="./images/poster-basket-game-image.jpeg" alt="Poster New Orlean vs Golden Star image"
+                              width="200"><br>
+                        <b>Poster New Orlean vs Golden Star</b><br>
+                        Design
+                  </li>
+                  <li>
+                        <img src="./images/img-Ryan-Harris.jpg" alt="Seafood Restaurant app layout image"
+                              width="200"><br>
+                        <b>Seafood Restaurant</b><br>
+                        App
+                  </li>
+                  <li>
+                        <img src="./images/project-prime-image.jpeg" alt="Stereo Headset image" width="200"><br>
+                        <b>Project Prime</b><br>
+                        Marketing
+                  </li>
+                  <li>
+                        <img src="./images/project-prime-image.jpeg" alt="Boxes image" width="200"><br>
+                        <b>Project Boxes</b><br>
+                        App
+                  </li>
+                  <li>
+                        <img src="./images/project-prime-image.jpeg" alt="Apple Mac Computer image" width="200"><br>
+                        <b>Inspiration has no Borders</b><br>
+                        Web-site
+                  </li>
+                  <li>
+                        <img src="./images/limited-edition-image.jpeg" alt="magazine image" width="200"><br>
+                        <b>Limited Edition</b><br>
+                        Design
+                  </li>
+                  <li>
+                        <img src="./images/project-lab-image.jpeg" alt="Tag image" width="200"><br>
+                        <b>Project LAB</b><br>
+                        Marketing
+                  </li>
+                  <li>
+                        <img src="./images/project-prime-image.jpeg" alt="working eith laptop image" width="200"><br>
+                        <b>Growing Business</b><br>
+                        Apps
+                  </li>
+            </ul>
+      </section>
+
+      <!--Footer section-->
+      <footer class="footer">
+            <p><a href="#"><b>WebStudio</b></a>
+            </p>
+            <address>
+                  <p>695 Park Ave, NY 10065, USA</p>
+                  <p>info@devstudio.com</p>
+                  <p>+1 212-772-4150</p>
+            </address>
+      </footer>
 
 </body>
 
-<!--Footer section-->
-<footer>
-      <p><a href="#"><b>WebStudio</b></a>
-      </p>
-      <address>
-            <p>695 Park Ave, NY 10065, USA</p>
-            <p>info@devstudio.com</p>
-            <p>+1 212-772-4150</p>
-      </address>
-</footer>
 
 </html>
