--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <title>Web Studio Homework Project</title>
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
             rel="stylesheet">
       <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body class="body">
+<body>
       <!--Header section-->
       <header class="header">
-            <p class="header__logo"><a href="#"><b>WebStudio</b></a>
+            <p class="header__logo"><a href="#"><b><span>Web</span>Studio</b></a>
             </p>
             <nav class="header__navigation">
                   <a href="#">Studio</a>
@@ -31,9 +31,9 @@
       </header>
 
       <!--Main section-->
-      <main>
+      <main class="main">
             <!--What we do section-->
-            <section>
+            <section class="main-wwd">
                   <ul>
                         <li><strong>ATTENTION TO DETAILS</strong><br>
                               We go into all the details and processes of your business to develop a customized
@@ -52,37 +52,37 @@
                               We use innovative tools to solve assigned tasks. It's time to simplify work processes.
                         </li>
                   </ul>
-                  <h2>What we do</h2>
+                  <h2 class="main-wwd__title">What we do</h2>
                   <ul>
-                        <li><img src="./images/img-1.jpg" alt="typing on keyboard" width="150"></li>
-                        <li><img src="./images/img-2.jpg" alt="planning phone layout" width="150"></li>
-                        <li><img src="./images/img-3.jpg" alt="colour plalette" width="150"></li>
+                        <li><img src="./images/img-1.jpg" alt="typing on keyboard" width="370"></li>
+                        <li><img src="./images/img-2.jpg" alt="planning phone layout" width="370"></li>
+                        <li><img src="./images/img-3.jpg" alt="colour plalette" width="370"></li>
                   </ul>
             </section>
 
             <!--Our team section-->
-            <section>
-                  <h2>Our team</h2>
+            <section class="main-team">
+                  <h2 class="main-team__title">Our team</h2>
 
-                  <ul>
+                  <ul class="main-team__list">
                         <li>
                               <img src="./images/img-Christopher-Walker.jpg" alt="Christopher Walker image"
-                                    width="200"><br>
+                                    width="270"><br>
                               <b>Christopher Walker</b><br>
                               Product Designer
                         </li>
                         <li>
-                              <img src="./images/img-Kylie-Evans.jpg" alt="Kylie Evans image" width="200"><br>
+                              <img src="./images/img-Kylie-Evans.jpg" alt="Kylie Evans image" width="270"><br>
                               <b>Kylie Evans</b><br>
                               Frontend Developer
                         </li>
                         <li>
-                              <img src="./images/img-Ryan-Harris.jpg" alt="Ryan Harris image" width="200"><br>
+                              <img src="./images/img-Ryan-Harris.jpg" alt="Ryan Harris image" width="270"><br>
                               <b>Ryan Harris</b><br>
                               Marketing
                         </li>
                         <li>
-                              <img src="./images/img-Tyler-Moore.jpg" alt="Tyler Moore image" width="200"><br>
+                              <img src="./images/img-Tyler-Moore.jpg" alt="Tyler Moore image" width="270"><br>
                               <b>Tyler Moore</b><br>
                               UI Designer
                         </li>
@@ -91,13 +91,13 @@
       </main>
 
       <!--Footer section-->
-      <footer>
-            <p><a href="#"><b>WebStudio</b></a>
+      <footer class="footer">
+            <p class="footer__logo"><a href="#"><b><span>Web</span>Studio</b></a>
             </p>
-            <address>
-                  <p>695 Park Ave, NY 10065, USA</p>
-                  <p>info@devstudio.com</p>
-                  <p>+1 212-772-4150</p>
+            <address class="footer__contact">
+                  <p class="footer__contact-address">695 Park Ave, NY 10065, USA</p>
+                  <p class="footer__contact-details">info@devstudio.com</p>
+                  <p class="footer__contact-details">+1 212-772-4150</p>
             </address>
       </footer>
 </body>
