--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,13 @@
       <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body class="body">
+<body>
       <!--Header section-->
       <header class="header">
             <p class="header__logo"><a href="#"><b><span>Web</span>Studio</b></a>
             </p>
             <nav class="header__navigation">
-                  <a href="#">Studio</a>
+                  <a href="index.html">Studio</a>
                   <a href="#">Portfolio</a>
                   <a href="#">Contacts</a>
             </nav>
@@ -98,8 +98,10 @@
             </p>
             <address class="footer__contact">
                   <p class="footer__contact-address">695 Park Ave, NY 10065, USA</p>
-                  <p class="footer__contact-details">info@devstudio.com</p>
-                  <p class="footer__contact-details">+1 212-772-4150</p>
+                  <div class="footer__contact-details">
+                        <a href="emailto:info@devstudio.com">info@devstudio.com</a><br>
+                        <a href="tel:+12127724150">+1 212-772-4150</a>
+                  </div>
             </address>
       </footer>
 
