--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
             </p>
             <address class="footer__contact">
                   <p class="footer__contact-address">695 Park Ave, NY 10065, USA</p>
-                  <p class="footer__contact-details">info@devstudio.com</p>
-                  <p class="footer__contact-details">+1 212-772-4150</p>
+                  <div class="footer__contact-details">
+                        <a href="emailto:info@devstudio.com">info@devstudio.com</a><br>
+                        <a href="tel:+12127724150">+1 212-772-4150</a>
+                  </div>
             </address>
       </footer>
 </body>
