--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,11 @@
 
       <!--Filters section-->
       <section class="filters-section">
-            <ul>
-                  <li>All</li>
-                  <li>Web-sites</li>
-                  <li>Apps</li>
-                  <li>Design</li>
-                  <li>Marketing</li>
-            </ul>
+            <button type="button">All</button>
+            <button type="button">Web-sites</button>
+            <button type="button">Apps</button>
+            <button type="button">Design</button>
+            <button type="button">Marketing</button>
       </section>
 
       <!--Portfolio section-->
@@ -98,14 +96,14 @@
             </p>
             <address class="footer__contact">
                   <p class="footer__contact-address">695 Park Ave, NY 10065, USA</p>
-                  <div class="footer__contact-details">
-                        <a href="emailto:info@devstudio.com">info@devstudio.com</a><br>
-                        <a href="tel:+12127724150">+1 212-772-4150</a>
-                  </div>
             </address>
+            <div class="footer__contact-details">
+                  <a href="emailto:info@devstudio.com">info@devstudio.com</a><br>
+                  <a href="tel:+12127724150">+1 212-772-4150</a>
+            </div>
+
       </footer>
 
 </body>
-
 
 </html>
