--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
       <!--Header section-->
-      <header class="header">
+      <header>
             <p class="header__logo"><a href="#"><b><span>Web</span>Studio</b></a>
             </p>
             <nav class="header__navigation">
@@ -31,7 +31,7 @@
       </header>
 
       <!--Main section-->
-      <main class="main">
+      <main>
             <!--What we do section-->
             <section class="main-wwd">
                   <ul>
