--- a/portfolio.html
+++ b/portfolio.html
@@ -13,12 +13,12 @@
 
 <body>
       <!--Header section-->
-      <header class="header">
+      <header>
             <p class="header__logo"><a href="#"><b><span>Web</span>Studio</b></a>
             </p>
             <nav class="header__navigation">
                   <a href="index.html">Studio</a>
-                  <a href="#">Portfolio</a>
+                  <a href="portfolio.html">Portfolio</a>
                   <a href="#">Contacts</a>
             </nav>
             <div class="header__info">
@@ -28,16 +28,16 @@
       </header>
 
       <!--Filters section-->
-      <section class="filters-section">
+      <div class="filters-section">
             <button type="button">All</button>
             <button type="button">Web-sites</button>
             <button type="button">Apps</button>
             <button type="button">Design</button>
             <button type="button">Marketing</button>
-      </section>
+      </div>
 
       <!--Portfolio section-->
-      <section class="portfolio-section">
+      <div class="portfolio-section">
             <ul>
                   <li>
                         <img src="./images/technoduck-image.jpeg" alt="website layout for laptop" width="370"><br>
@@ -88,7 +88,7 @@
                         Apps
                   </li>
             </ul>
-      </section>
+      </div>
 
       <!--Footer section-->
       <footer class="footer">
