--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="header__logo"><a href="#"><b><span>Web</span>Studio</b></a>
             </p>
             <nav class="header__navigation">
-                  <a href="#">Studio</a>
+                  <a href="index.html">Studio</a>
                   <a href="portfolio.html">Portfolio</a>
                   <a href="#">Contacts</a>
             </nav>
